Added functionality to set a default allowed ip for a peer

--- a/src/templates/configuration.html
+++ b/src/templates/configuration.html
@@ -58,7 +58,7 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label for="allowed_ips">Allowed IPs <code>(Required)</code></label>
-                                    <input type="text" class="form-control" id="allowed_ips">
+                                    <input type="text" class="form-control" id="allowed_ips" value="{{ allowed_ip }}">
                                 </div>
                             </div>
                             <div class="col-sm-6">
